Nurbs circle and curve dont draw in objectmode #58298

Closed
opened 2018-11-30 12:56:03 +01:00 by Stephen Hall · 21 comments

System Information
Operating system: Win10
Graphics card: Nvidia

Blender Version
Broken:
2.8 Beta

Short description of error
When trying to create a surface / nurbs circle or curve all you get is a single point. The surface, cylinder, sphere, and torus work as expected.

Exact steps for others to reproduce the error
In Modelling work-space, click Add / Surface / Nurbs Circle. I am very new to Blender so possibly I am doing something wrong.

image.png

**System Information** Operating system: Win10 Graphics card: Nvidia **Blender Version** Broken: 2.8 Beta **Short description of error** When trying to create a surface / nurbs circle or curve all you get is a single point. The surface, cylinder, sphere, and torus work as expected. **Exact steps for others to reproduce the error** In Modelling work-space, click Add / Surface / Nurbs Circle. I am very new to Blender so possibly I am doing something wrong. ![image.png](https://archive.blender.org/developer/F5767598/image.png)
Author

Added subscriber: @stephenmhall

Added subscriber: @stephenmhall

#59032 was marked as duplicate of this issue

#59032 was marked as duplicate of this issue

#59033 was marked as duplicate of this issue

#59033 was marked as duplicate of this issue

#59021 was marked as duplicate of this issue

#59021 was marked as duplicate of this issue

#58974 was marked as duplicate of this issue

#58974 was marked as duplicate of this issue
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Clément Foucault was assigned by Philipp Oeser 2018-11-30 13:31:53 +01:00
Member

Confirmed these dont draw in objectmode.
(try going into editmode and you can see that that the control points are all there)

@fclem: could you check on this?

Confirmed these dont draw in objectmode. (try going into editmode and you can see that that the control points are all there) @fclem: could you check on this?
Philipp Oeser changed title from Nurbs circle and curve produce nothing to Nurbs circle and curve dont draw in objectmode 2018-11-30 13:41:15 +01:00

Added subscriber: @SergeyIvanov

Added subscriber: @SergeyIvanov

its work as always in edit mode. its not a bug

in object mode its drawing

Screenshot_21.jpg

its work as always in edit mode. its not a bug in object mode its drawing ![Screenshot_21.jpg](https://archive.blender.org/developer/F5767992/Screenshot_21.jpg)

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Member

@SergeyIvanov: have you tried Add > Surface > Nurbs Circle?
(these dont draw for me -- linux, 970m)

adding a curve works though Add > Curve > Nurbs Circle...

@SergeyIvanov: have you tried `Add` > **`Surface`** > `Nurbs Circle`? (these dont draw for me -- linux, 970m) adding a curve works though `Add` > **`Curve`** > `Nurbs Circle`...

yeah , its works! =) gtx 1070 windows 10
Screenshot_22.jpg

nurbs_surface.blend

yeah , its works! =) gtx 1070 windows 10 ![Screenshot_22.jpg](https://archive.blender.org/developer/F5768197/Screenshot_22.jpg) [nurbs_surface.blend](https://archive.blender.org/developer/F5768203/nurbs_surface.blend)
Author

I too could add a Curve > Nurbs Circle and use that for the bevel profile. I can see the Surface control points in Edit mode but there is no Circle inside the points. I also crashed Blender when I dragged one end of the bevelled bezier curve toward the other end with the intention of closing the loop.

I too could add a Curve > Nurbs Circle and use that for the bevel profile. I can see the Surface control points in Edit mode but there is no Circle inside the points. I also crashed Blender when I dragged one end of the bevelled bezier curve toward the other end with the intention of closing the loop.

Added subscriber: @brecht

Added subscriber: @brecht

The problem is that loose edges are not drawn in object mode, like we do for meshes.

The problem is that loose edges are not drawn in object mode, like we do for meshes.

@stephenmhall, for crashes you can report a separate bug, it's unrelated to this one.

@stephenmhall, for crashes you can report a separate bug, it's unrelated to this one.

Removed subscriber: @SergeyIvanov

Removed subscriber: @SergeyIvanov

Added subscriber: @szymi

Added subscriber: @szymi

Added subscriber: @BienvenidoSanchez

Added subscriber: @BienvenidoSanchez

This issue was referenced by f371e633f9

This issue was referenced by f371e633f9428e767dce4aab59b5f30c78f2b66f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58298
No description provided.