Curve Batch Cache: Add support for loose edges and curve/surf modifier

Fixes T58298 Nurbs circle and curve dont draw in objectmode
Fixes T58107 Modified curves/surfaces/fonts do not show their eval mesh